src/main/resources/k8s-svc-config.yaml
apiVersion: v1  
kind: Service  
metadata:  
  name: commonbff 
  labels:  
    app: commonbff 
  namespace: dev  
  annotations:  
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"  
    prometheus.io/scrape: 'true'  
    prometheus.io/port:   '9099'  
  
spec:  
  type: LoadBalancer  
  ports:  
  - protocol: TCP  
    port: 9099  
  selector:  
    app: commonbff
