src/main/resources/k8s-istio-config.yaml
apiVersion: networking.istio.io/v1alpha3  
kind: Gateway  
metadata:  
  name: commonbff  
  namespace: dev  
spec:  
  selector:  
    istio: pvt-ingressgateway  
  servers:  
  - port:  
      number: 80
      name: http-commonbff 
      protocol: HTTP  
    hosts:  
    - "*"  
    
apiVersion: networking.istio.io/v1alpha3  
kind: VirtualService  
metadata:  
  name: commonbff 
  namespace: dev  
spec:  
  hosts:  
  - "*"  
  gateways:  
  - commonbff  
  http:  
  - match:  
    - exact: /commonbff 
    route:  
    - destination:  
        host: commonbff  
        port:  
          number: 80
    corsPolicy:
      allowOrigin:
      - "http://*.ap-south-1.elb.amazonaws.com"
      allowMethods:
      - POST
      - GET
      - DELETE
      - PUT
      allowHeaders:
      - authorization
      - content-type
      - accept
      - origin
      - user-agent
      exposeHeaders:
      - x-custom-header
      maxAge: 300s
      allowCredentials: true
